--- a/Proj/Some Bullshit.ipynb
+++ b/Proj/Some Bullshit.ipynb
@@ -20,7 +20,7 @@
   {
    "cell_type": "code",
    "execution_count": 20,
-   "id": "32513aaf",
+   "id": "fe02e720",
    "metadata": {},
    "outputs": [
     {
@@ -38,7 +38,7 @@
   {
    "cell_type": "code",
    "execution_count": 11,
-   "id": "64c2dd46",
+   "id": "caf33215",
    "metadata": {},
    "outputs": [
     {
@@ -456,7 +456,7 @@
   {
    "cell_type": "code",
    "execution_count": 43,
-   "id": "ac10e383",
+   "id": "35b5f4a5",
    "metadata": {},
    "outputs": [
     {
@@ -501,7 +501,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "cdbe7638",
+   "id": "75630958",
    "metadata": {},
    "source": [
     "# First We Must Address The Imbalance In Our Target Variable\n",
@@ -513,7 +513,7 @@
   {
    "cell_type": "code",
    "execution_count": 13,
-   "id": "7e126052",
+   "id": "0b611305",
    "metadata": {},
    "outputs": [
     {
@@ -544,7 +544,7 @@
   {
    "cell_type": "code",
    "execution_count": 33,
-   "id": "305cd2bc",
+   "id": "24aff44b",
    "metadata": {},
    "outputs": [
     {
@@ -646,7 +646,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "52ffac6b",
+   "id": "2c66359d",
    "metadata": {},
    "source": [
     "# Results\n",
@@ -658,7 +658,7 @@
   {
    "cell_type": "code",
    "execution_count": 73,
-   "id": "ab8c6dc7",
+   "id": "182308d4",
    "metadata": {},
    "outputs": [
     {
@@ -690,7 +690,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d0b03bbc",
+   "id": "c921156b",
    "metadata": {},
    "source": [
     "# Removing Features\n",
@@ -704,7 +704,7 @@
   {
    "cell_type": "code",
    "execution_count": 74,
-   "id": "9a131a37",
+   "id": "a3ff6e2a",
    "metadata": {},
    "outputs": [
     {
@@ -750,7 +750,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "20a5baeb",
+   "id": "73c12eb5",
    "metadata": {},
    "source": [
     "# Outliers\n",
@@ -769,7 +769,7 @@
   {
    "cell_type": "code",
    "execution_count": 75,
-   "id": "9750a9f5",
+   "id": "7edb3a67",
    "metadata": {
     "scrolled": true
    },
@@ -994,7 +994,7 @@
   {
    "cell_type": "code",
    "execution_count": 76,
-   "id": "23a6c900",
+   "id": "bb5245de",
    "metadata": {},
    "outputs": [
     {
@@ -1039,7 +1039,7 @@
   {
    "cell_type": "code",
    "execution_count": 77,
-   "id": "ac17ecac",
+   "id": "0383dedb",
    "metadata": {
     "scrolled": true
    },
@@ -1264,7 +1264,7 @@
   {
    "cell_type": "code",
    "execution_count": 79,
-   "id": "3807bedc",
+   "id": "ae9b71e2",
    "metadata": {
     "scrolled": true
    },
@@ -1288,7 +1288,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f6f7d0a9",
+   "id": "b5eeac46",
    "metadata": {},
    "source": [
     "# Findings\n",
@@ -1305,18 +1305,20 @@
   },
   {
    "cell_type": "markdown",
-   "id": "0f7d7890",
+   "id": "744260e0",
    "metadata": {},
    "source": [
     "# Scatter Plot\n",
     "\n",
-    "* This would not be good for EDA as most features are categorical in nature and would not make sense to create a scatter plot"
+    "* This would not be good for EDA as most features are categorical in nature and would not make sense to create a scatter plot\n",
+    "\n",
+    "# Something"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 85,
-   "id": "94f997b1",
+   "id": "b38e315f",
    "metadata": {
     "scrolled": false
    },
